Fixed mobile layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,34 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+
+@morganheuer
+morganheuer
+/
+my-first-portfolio
+1
+00
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+my-first-portfolio/css/main.css
+@morganheuer
+morganheuer Tablet and desktop responsive
+Latest commit 145c1a9 21 minutes ago
+ History
+ 1 contributor
+292 lines (235 sloc)  3.69 KB
+
 /***** BASE STYLES *****/
 
 html {
@@ -22,13 +53,13 @@ a {
 
 h1 {
   font-family: 'Libre Baskerville', serif;
-  font-size: 3em;
+  font-size: 2em;
 }
 
 h2 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
-  font-size: 2.5em;
+  font-size: 1.5em;
 }
 
 h3 {
@@ -217,14 +248,17 @@ footer .social-icons p i {
   }
 
   h1 {
+    font-size: 2.8em;
     line-height: 1.4;
   }
 
   h2 {
+    font-size: 2.25em;
     line-height: 1.333;
   }
 
   h3 {
+    font-size: 2em;
     line-height: 1.25;
   }
 
@@ -243,7 +277,8 @@ footer .social-icons p i {
   }
 
   header nav {
-    width: 40%;
+    width: 45%;
+    font-size: 1em;
     align-self: flex-end;
   }
 
@@ -255,7 +290,7 @@ footer .social-icons p i {
   }
 
   .header-divider {
-    margin: 50px 0;
+    margin: 30px 0;
   }
 
   .header-content {
@@ -281,12 +316,6 @@ footer .social-icons p i {
   .thumbnail {
     width: 100%;
   }
-
-
-}
-
-@media only screen and (min-width: 1200px) {
-  /*Desktop styles here*/
 
 
 }
